# WoR

./: .gitignore  README.md
robotapplication/: CMakeLists.txt  Matrix.hpp  README.md  package.xml
robotapplication/Default/: makefile  sources.mk
robotapplication/Default/Astar Code/src/: AStar.d  Graph.d  main.d  subdir.mk
robotapplication/Default/src/: AStar.d  Graph.d  InverseKinematics.d  motion_control_node.d  subdir.mk  tui_node.d
robotapplication/Default/src/robotalgorithmfork/src/: subdir.mk
robotapplication/doc/: .~lock.WOR SE.docx#  Doxyfile  WOR SE.docx
robotapplication/launch/: default.launch
robotapplication/msg/: arm_control_msg.msg
robotapplication/src/: InverseKinematics.h  Matrix.hpp  Matrix.inc  RosCommunication.cpp  RosCommunication.h  motion_control_controller.cpp  motion_control_controller.h  motion_control_interface.cpp  motion_control_interface.h  motion_control_node.cpp  tui_node.cpp
robotapplication/src/robotalgorithmfork/: .gitignore
robotapplication/src/robotalgorithmfork/src/: Calibration.cpp  Calibration.hpp  Config.hpp  Detector.cpp  Detector.hpp  Reader.cpp  Reader.hpp  Specification.cpp  Specification.hpp  main.cpp
robotarminterface/: .clang-format  .gitignore  CMakeLists.txt  package.xml
robotarminterface/Documenten/: FDUC.odt  RobotArmInterface.asta
robotarminterface/msg/: emergencyStopMsg.msg  moveMultipleServosMsg.msg  moveServo.msg  moveSingleServoMsg.msg
robotarminterface/src/: MotionControl.cpp  MotionControl.hpp  MovementCommand.hpp  RosCommunication.cpp  RosCommunication.hpp  SerialControl.cpp  SerialControl.hpp  Servo.hpp  SmartQueue.hpp  demo.cpp  main.cpp
robotarminterface/src/doxygen/: Doxyfile
robotarminterface/src/doxygen/html/: _motion_control_8cpp.html  _motion_control_8cpp__incl.map  _motion_control_8cpp__incl.md5  _motion_control_8hpp.html  _motion_control_8hpp__incl.map  _motion_control_8hpp__incl.md5  _motion_control_8hpp_source.html  _movement_command_8hpp.html  _movement_command_8hpp__incl.map  _movement_command_8hpp__incl.md5  _movement_command_8hpp_source.html  _ros_communication_8cpp.html  _ros_communication_8cpp__incl.map  _ros_communication_8cpp__incl.md5  _ros_communication_8hpp.html  _ros_communication_8hpp__incl.map  _ros_communication_8hpp__incl.md5  _ros_communication_8hpp_source.html  _serial_control_8cpp.html  _serial_control_8cpp__incl.map  _serial_control_8cpp__incl.md5  _serial_control_8hpp.html  _serial_control_8hpp__incl.map  _serial_control_8hpp__incl.md5  _serial_control_8hpp_source.html  _servo_8hpp.html  _servo_8hpp__incl.map  _servo_8hpp__incl.md5  _servo_8hpp_source.html  _smart_queue_8hpp.html  _smart_queue_8hpp__incl.map  _smart_queue_8hpp__incl.md5  _smart_queue_8hpp_source.html  annotated.html  class_motion_control-members.html  class_motion_control.html  class_motion_control__coll__graph.map  class_movement_command-members.html  class_movement_command.html  class_movement_command__coll__graph.map  (+28 more)
robotarminterface/src/doxygen/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_4.js  enumvalues_5.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  searchdata.js  typedefs_0.js
robotarminterface/src/doxygen/latex/: _motion_control_8cpp.tex  _motion_control_8cpp__incl.md5  _motion_control_8hpp.tex  _motion_control_8hpp__incl.md5  _movement_command_8hpp.tex  _movement_command_8hpp__incl.md5  _ros_communication_8cpp.tex  _ros_communication_8cpp__incl.md5  _ros_communication_8hpp.tex  _ros_communication_8hpp__incl.md5  _serial_control_8cpp.tex  _serial_control_8cpp__incl.md5  _serial_control_8hpp.tex  _serial_control_8hpp__incl.md5  _servo_8hpp.tex  _servo_8hpp__incl.md5  _smart_queue_8hpp.tex  _smart_queue_8hpp__incl.md5  annotated.tex  class_motion_control.tex  class_motion_control__coll__graph.md5  class_movement_command.tex  class_movement_command__coll__graph.md5  class_ros_communication.tex  class_serial_control.tex  class_serial_control__coll__graph.md5  class_servo.tex  class_servo__coll__graph.md5  class_smart_queue.tex  files.tex  main_8cpp.tex  main_8cpp__incl.md5  refman.tex
robotsimulation/: .gitignore  CMakeLists.txt  README.md  package.xml
robotsimulation/config/: config.rviz  servo_config.yaml
robotsimulation/doc/: WOR simulation.odt
robotsimulation/launch/: default.launch
robotsimulation/msg/: cup_data.msg
robotsimulation/src/: .clang-format  RosCommunication.cpp  RosCommunication.h  Servo.h  cli_node.cpp  convert_node.cpp  cup.cpp  cup.h  demo_node.cpp  ssc32u_parser_interface.cpp  ssc32u_parser_interface.h  ssc32u_parser_node.cpp  ssc32u_parser_to_jointstate.cpp  ssc32u_parser_to_jointstate.h  virtual_cup.cpp  virtual_cup.h  virtual_cup_interface.cpp  virtual_cup_interface.h  virtual_cup_node.cpp
robotsimulation/urdf/: lynxmotion_arm.urdf  lynxmotion_arm.urdf.xarco
robotvision/: CMakeLists.txt  package.xml
robotvision/msg/: PickAndPlace.msg
robotvision/src/: ApplicationManager.cpp  ApplicationManager.hpp  AsyncGetLine.hpp  ColorFilter.cpp  ColorFilter.hpp  EnumOperators.hpp  ImageDisplayer.hpp  ImageFilter.cpp  ImageFilter.hpp  InputHandler.hpp  RosCommunication.cpp  RosCommunication.hpp  ShapeFilter.cpp  ShapeFilter.hpp  main.cpp
shared/config/: servo_config.yaml
shared/src/: Servo.hpp  SimulationServo.hpp
