<?xml version="1.0"?>
<package>
  <name>robotarminterface</name>
  <version>0.0.0</version>
  <description>The Robotarm-Interface package</description>

  <maintainer email="thomas@todo.todo">thomas</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>Boost</build_depend>
  <build_depend>robotsimulation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>Boost</run_depend>
  <run_depend>robotsimulation</run_depend>
</package>
