<?xml version="1.0"?>
<package>
  <name>robotvision</name>
  <version>0.0.0</version>
  <description>The robotvision package</description>

  <maintainer email="thomasmaters@hotmail.com">Thomas</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>robotarminterface</build_depend>
  <build_depend>robotapplication</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>robotarminterface</run_depend>
  <run_depend>robotapplication</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
